--- a/模型评估.md
+++ b/模型评估.md
@@ -5,3 +5,8 @@
 >准确率（accuration）/ 精准率（precision）/ 召回率(recall) / F1-score / P-R曲线 / ROC / AUC / MSE
 
 ### 3. ROC曲线与AUC
+> ROC曲线的定义、绘制方法、与P-R曲线对比有什么特性、适用场景、AUC的计算方法
+
+### 
+[欧氏距离](https://baike.baidu.com/item/%E6%AC%A7%E5%87%A0%E9%87%8C%E5%BE%97%E5%BA%A6%E9%87%8F/1274107?fromtitle=%E6%AC%A7%E5%BC%8F%E8%B7%9D%E7%A6%BB&fromid=2809635)
+
