--- a/模型评估.md
+++ b/模型评估.md
@@ -7,6 +7,14 @@
 ### 3. ROC曲线与AUC
 > ROC曲线的定义、绘制方法、与P-R曲线对比有什么特性、适用场景、AUC的计算方法
 
-### 
-[欧氏距离](https://baike.baidu.com/item/%E6%AC%A7%E5%87%A0%E9%87%8C%E5%BE%97%E5%BA%A6%E9%87%8F/1274107?fromtitle=%E6%AC%A7%E5%BC%8F%E8%B7%9D%E7%A6%BB&fromid=2809635)
+### 余弦距离
+> 余弦距离与欧氏距离的区别与联系、各自的适用场景
+> [欧氏距离](https://baike.baidu.com/item/%E6%AC%A7%E5%87%A0%E9%87%8C%E5%BE%97%E5%BA%A6%E9%87%8F/1274107?fromtitle=%E6%AC%A7%E5%BC%8F%E8%B7%9D%E7%A6%BB&fromid=2809635)
+> KL距离
+
+### A/B Test
+> A/B测试的必要性说明
+> 如何进行A/B测试？实验组、对照组如何划分？
+
+
 
