--- a/模型评估.md
+++ b/模型评估.md
@@ -26,4 +26,29 @@
 
 > 自助法
 
+### 超参数优化
+> 网格搜索
+
+>随机搜索
+
+>贝叶斯优化
+
+### 过拟合与欠拟合
+##### 1. 解释过拟合与欠拟合
+##### 2. 降低过拟合风险的方法
+> 数据
+
+> 模型复杂度
+
+> 正则
+
+> 集成学习
+
+##### 3. 降低欠拟合风险的方法
+> 特征
+
+> 模型复杂度
+
+> 正则化
+
 
