--- a/主成分分析.md
+++ b/主成分分析.md
@@ -1,1 +1,3 @@
 
+##### 1. [向量点积的几何意义](https://www.cnblogs.com/gxcdream/p/7597865.html)
+##### 2. [向量投影](https://www.cnblogs.com/graphics/archive/2010/08/03/1791626.html)
