--- a/决策树.md
+++ b/决策树.md
@@ -1,1 +1,15 @@
+##### 1. 决策树的生成过程
+> 特征选择-> 树的构造-> 剪枝
 
+##### 2. 常见的决策树算法及其优缺点
+> ID3 （最大信息增益）
+
+> C4.5 （最大信息增益比）
+
+> CART （最小基尼指数）
+
+##### 3.决策树剪枝方法及其优缺点
+评估结点对模型泛化能力是否有明显提高
+> 预剪枝
+
+> 后剪枝
