--- a/主成分分析.md
+++ b/主成分分析.md
@@ -1,3 +1,4 @@
 1. [向量点积的几何意义](https://www.cnblogs.com/gxcdream/p/7597865.html)
 2. [向量投影](https://www.cnblogs.com/graphics/archive/2010/08/03/1791626.html)
 3. PCA 原理（最大方差、协方差矩阵、特征值、特征向量、投影向量、降维后的信息占比）
+4. 无监督数据降维方法
