--- a/线性判别分析.md
+++ b/线性判别分析.md
@@ -2,4 +2,9 @@
 2. 以最大化类间方差-最小化类内方差为优化目标
 3. 类内散度矩阵、类间散度矩阵、全局散度矩阵、特征向量、投影超平面
 4. 与PCA类比分析优缺点：
-    > 对无监督任务使用PCA，对有监督任务使用LDA
+> 对无监督任务使用PCA，对有监督任务使用LDA
+    
+> PCA选择的是投影后数据方差最大的方向。由于它是无监督的，因此PCA假设方差越大，信息量越多，用主成分来表示原始数据可以去除
+冗余的维度，达到降维。
+
+> 而LDA选择的是投影后类内方差小、类间方差大的方向。其用到了类别标签信息，为了找到数据中具有判别性的维度，使得原始数据在这些方向上投影后，不同类别尽可能区分开。
